云开发后台版本

--- a/client/app.json
+++ b/client/app.json
@@ -1,15 +1,15 @@
 {
-  "pages":[
+  "pages": [
     "pages/query/query",
     "pages/common/config",
     "pages/records/records",
     "pages/submit/submit"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
   "tabBar": {
     "color": "#7A7E83",
@@ -40,5 +40,6 @@
   "networkTimeout": {
     "request": 10000,
     "downloadFile": 10000
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
