--- a/project.config.json
+++ b/project.config.json
@@ -18,6 +18,7 @@
 	"cloudfunctionRoot": "cloud-functions/",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"cloudfunctionTemplateRoot": "cloudfunctionTemplate",
 	"condition": {
 		"search": {
 			"current": -1,
